--- a/red-planner-front-end/package.json
+++ b/red-planner-front-end/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@nestjs/config": "^4.0.2",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.81.2",
     "axios": "^1.10.0",
@@ -23,24 +24,25 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.524.0",
     "next": "15.3.4",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
-    "sass": "^1.89.2",
     "sonner": "^2.0.5",
     "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4",
+    "sass": "^1.89.2",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
